# studies

./: .gitignore  GEMINI.md  README.md
.gemini/: settings.json
00_project/HandsOnMonitoringWithPrometheus/docs/: ch01.md  ch02.md
00_project/LearnCPP/HelloWorld/: .editorconfig  .gitignore  HelloWorld.cpp  HelloWorld.sln  HelloWorld.vcxproj  HelloWorld.vcxproj.filters
00_project/LearnCPP/LearnCPP/: .gitignore  LearnCPP.sln
00_project/LearnCPP/LearnCPP/02_03_Function/: 02_03_Function.vcxproj  02_03_Function.vcxproj.filters  main.cpp
00_project/LearnCPP/LearnCPP/02_04_LocalScope/: 02_04_LocalScope.vcxproj  main.cpp
00_project/LearnCPP/LearnCPP/02_05_FuncitonDecrlare/: 02_05_FuncitonDecrlare.vcxproj  02_05_FuncitonDecrlare.vcxproj.filters  main.cpp  math.cpp  math.hpp
00_project/LearnCPP/LearnCPP/02_ProgramStructure/: 02_ProgramStructure.vcxproj
00_project/LearnCPP/LearnCPP/03_01_PrimitiveType/: main.cpp  (+2 more)
00_project/PocuCsharp/00/: README.md
00_project/PracticeVim/: 1회차.md
00_project/PracticeVim/src/: tip13.txt  tip15.txt  tip16.txt
00_project/TheGoProgrammingLanguage/: .gitignore  go.mod
00_project/cli-cpp/01/hello_vcpkg/: .gitignore  CMakeLists.txt  README.md
00_project/cli-cpp/01/hello_vcpkg/src/: main.cpp
00_project/cli-cpp/01/hello_vcpkg/src/utils/: hello.cpp
00_project/cli-cpp/01/hello_vcpkg/tests/: main_test.cpp
03_archive/cli-rust/01/: README.md
AiProgramming/nomadN8n/: README.md
AiProgramming/nomadN8n/Introduction/: README.md
Core/TuckerGolang/: .gitignore  go.mod
notes/PocuCsharp/: README.md
notes/PocuCsharp/00/: README.md
(+100 files in other folders)
